# git-workflow

./: CLAUDE.md  Cargo.toml  README.md  dogfood.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
bench/: log_bench.sh
benches/: status_bench.rs
docs/brainstorms/: 2026-03-05-gw-stacked-branches-brainstorm.md
docs/plans/: 2026-03-05-feat-gw-stacked-branch-manager-plan.md  2026-03-05-feat-interactive-branch-switch-plan.md
docs/research/: 2026-03-05-git-rebase-automation-best-practices.md
mcp-server/: Cargo.toml  README.md  package.json
mcp-server/src/: index.ts  main.rs
plugins/gw/: .mcp.json  CLAUDE.md
plugins/gw/.claude-plugin/: plugin.json
plugins/gw/skills/gw/: SKILL.md
src/: cli.rs  context.rs  gh.rs  git.rs  lib.rs  main.rs  propagation.rs  stash.rs  state.rs  ui.rs  validate.rs
src/commands/: adopt.rs  branch.rs  completions.rs  config.rs  diff.rs  mcp_server.rs  mcp_setup.rs  mod.rs  push.rs  rebase.rs  split.rs  split_tui.rs  stack.rs  status.rs  switch.rs  sync.rs  tree.rs
tests/: adopt_test.rs  branch_test.rs  e2e_test.rs  push_test.rs  rebase_test.rs  split_test.rs  stack_test.rs  switch_test.rs  sync_test.rs
tests/common/: mod.rs
