[workspace]
members = [".", "mcp-server"]
resolver = "3"

[package]
name = "gw"
version = "0.1.0"
edition = "2024"
description = "Git stacked branch manager"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
colored = "3"
console = "0.15"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
