[package]
name = "gw"
version = "0.1.2"
edition = "2024"
description = "Git stacked branch manager"
repository = "https://github.com/jondeibel/git-workflow"
homepage = "https://github.com/jondeibel/git-workflow"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
colored = "3"
console = "0.15"
tempfile = "3"
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "homebrew"]
tap = "jondeibel/homebrew-tap"
publish-jobs = ["homebrew"]
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]

[workspace.metadata.dist.dependencies.homebrew]
difftastic = { stage = ["run"] }
