[package]
name = "gw-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server exposing gw stacked branch operations as tools"

[[bin]]
name = "gw-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
